Lab1/test_results/student_{student}.txt
test_OneNearestNeighborClassifier (unit_test.TestClass.test_OneNearestNeighborClassifier) ... ERROR
test_hello (unit_test.TestClass.test_hello) ... ERROR
test_roll_array (unit_test.TestClass.test_roll_array) ... ERROR
test_surface_class (unit_test.TestClass.test_surface_class) ... ERROR

======================================================================
ERROR: test_OneNearestNeighborClassifier (unit_test.TestClass.test_OneNearestNeighborClassifier)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/Users/davidwunsch/Documents/VisualStudioCode/UniverstiyLeidenGithub/MachineLearning/ml2024-lab1-Skylake143/unit_test.py", line 61, in test_OneNearestNeighborClassifier
    train = generate_data()
            ^^^^^^^^^^^^^
NameError: name 'generate_data' is not defined

======================================================================
ERROR: test_hello (unit_test.TestClass.test_hello)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/Users/davidwunsch/Documents/VisualStudioCode/UniverstiyLeidenGithub/MachineLearning/ml2024-lab1-Skylake143/unit_test.py", line 37, in test_hello
    self.assertEqual(hello("World"), 'Hello World!')
                     ^^^^^
NameError: name 'hello' is not defined. Did you mean: 'help'?

======================================================================
ERROR: test_roll_array (unit_test.TestClass.test_roll_array)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/Users/davidwunsch/Documents/VisualStudioCode/UniverstiyLeidenGithub/MachineLearning/ml2024-lab1-Skylake143/unit_test.py", line 42, in test_roll_array
    self.assertTrue(np.array_equal(roll_array(a,2,"right"), np.asarray([8, 9, 0, 1, 2, 3, 4, 5, 6, 7])))
                                   ^^^^^^^^^^
NameError: name 'roll_array' is not defined

======================================================================
ERROR: test_surface_class (unit_test.TestClass.test_surface_class)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/Users/davidwunsch/Documents/VisualStudioCode/UniverstiyLeidenGithub/MachineLearning/ml2024-lab1-Skylake143/unit_test.py", line 52, in test_surface_class
    labels = np.asarray(surface_class(df, 24))
                        ^^^^^^^^^^^^^
NameError: name 'surface_class' is not defined

----------------------------------------------------------------------
Ran 4 tests in 0.006s

FAILED (errors=4)
